fixes issue #9 (“Some pictures are not fitting”)

--- a/css/wp_specific.css
+++ b/css/wp_specific.css
@@ -8,7 +8,8 @@
     max-width: 100% !important;
 }
 
-.wp-caption > a > img {
+.wp-caption > a > img,
+.wp-caption > img{
     max-width: 100%;
     height: auto;
 }
